# HoseBeast

./: .gitignore  README.md  adc_demo.py  pyproject.toml  requirements.txt  rxconfig.py  start_hosebeast.sh
hosebeast/: adc_demo.py  hosebeast.py  pressure_estimator.py  relay_control.py  relay_demo_async.py  web_utils.py
hosebeast/components/: card.py  navbar.py  notification.py
hosebeast_2/components/: card.py  navbar.py  notification.py
src/hosebeast/: adc_demo.py  relay_demo_async.py
src/hosebeast_2/: __init__.py  adc_demo.py
