[project]
name = "hosebeast-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.5.9",
    "gpiozero>=2.0.1",
    "rpi-gpio>=0.7.1",
    "adafruit-circuitpython-ads1x15>=2.3.0",
    "sqlite-utils>=3.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
